--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 once_cell = "1.15"
 clap = { version = "4.0", features = ["derive"] }
+log = "0.4"
+env_logger = "0.10"
